# LuaJIT-Example-Android

./: .gitignore  .gitmodules  LICENSE  gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  library_luajit.cmake
app/src/androidTest/java/ru/wohlsoft/helezhe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: helezhe-jni.c
app/src/main/java/ru/wohlsoft/helezhe/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ru/wohlsoft/helezhe/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
